<resources>

    <string name="app_name">FreeHAL</string>
    <string name="title_detail">Conversation</string>
    <string name="title_list">FreeHAL - the artificial intelligence</string>
    <string name="hint_message">Please type a sentence&#8230;</string>
    <string name="button_send">Send</string>
    <string name="comment_online">You need an internet connection to use the online version.</string>
    <string name="comment_offline">The offline version only works on rooted Android devices.</string>
    <string name="person_user">You</string>
    <string name="person_freehal">FreeHAL</string>
    <string name="tab_online_talk">Online Talk</string>
    <string name="tab_offline_talk">Offline Talk</string>
    <string name="tab_log">Log File</string>
    <string name="tab_graph">Parse Tree</string>
    <string name="tab_about">About</string>
    <string name="no_output">&lt;i&gt;(no answer)&lt;/i&gt;</string>
    <string name="not_implemented">&lt;i&gt;(not yet implemented)&lt;/i&gt;</string>
    <string name="no_log">There is no log file to view.</string>
    <string name="no_graph">There is no parse tree to view.</string>
    <string name="about_text">The FreeHAL project\'s mission is to develop an open source computer program which very closely imitates human conversation. FreeHAL consists of a server application and several frontends, a cross-platform GUI and a web interface.&lt;br&gt;&lt;br&gt;Android app: %1$s&lt;br&gt;Online version: %2$s&lt;br&gt;Offline version: %3$s</string>
    <string name="ask_again">ask again</string>
    <string name="edit_question">edit question</string>
    <string name="share_conversation">share conversation</string>
    <string name="subject_share_conversation">FreeHAL</string>
    <string name="menu_speak">Voice Recognition</string>
    <string name="notification_idle">Select this to start the artificial intelligence</string>
    <string name="menu_preferences">Preferences</string>
    <string name="set_preferences">Preferences</string>
    <string name="string_true">Yes</string>
    <string name="string_false">No</string>
    <string name="prefs_service">System Service</string>
    <string name="pref_start_at_boot">Start FreeHAL at device boot</string>
    <string name="prefs_identity">Identity</string>
    <string name="pref_user_name">Your name</string>
    <string name="pref_user_email">Your email address</string>
    <string name="pref_freehal_name">FreeHAL\'s name</string>
    <string name="prefs_other">Other</string>
    <string name="pref_clear">Reset</string>
    <string name="pref_clear_summary">Reset all preferences to default values</string>
    <string name="pref_clear_toast">All preferences have been reset</string>
    <string name="progressnotification">Progress</string>

</resources>